fix: nav and logo alignment in header (#52)

--- a/src/assets/css/components/navigation.css
+++ b/src/assets/css/components/navigation.css
@@ -8,17 +8,19 @@
     list-style: none;
     font-size: var(--step-1);
     margin-top: 1rem; }
-    @media all and (min-width: 768px) {
+    @media all and (min-width: 680px) {
       .site-nav ul {
-        font-size: var(--step-0); } }
+        font-size: var(--step-0);
+        margin-top: 0;
+        align-items: center; } }
     .site-nav ul[data-open="false"] {
       display: none; }
-      @media all and (min-width: 640px) {
+      @media all and (min-width: 680px) {
         .site-nav ul[data-open="false"] {
           display: flex; } }
     .site-nav ul[data-open="true"] {
       display: block; }
-      @media all and (min-width: 640px) {
+      @media all and (min-width: 680px) {
         .site-nav ul[data-open="true"] {
           display: flex; } }
   .site-nav .flexer {
@@ -43,7 +45,7 @@
   align-items: center;
   margin-left: .5rem;
   margin-right: -10px; }
-  @media all and (min-width: 640px) {
+  @media all and (min-width: 680px) {
     .site-nav-toggle {
       display: none; } }
   .site-nav-toggle svg {
@@ -69,7 +71,7 @@
   .site-nav-toggle[aria-expanded="true"] #ham-bottom {
     transform: rotate(-41deg); }
 
-@media all and (min-width: 640px) {
+@media all and (min-width: 680px) {
   .site-nav {
     flex-direction: row;
     grid-column: auto;
@@ -78,5 +80,7 @@
       display: flex;
       gap: 2rem;
       font-size: var(--step-0); }
+      .site-nav ul li {
+        margin-bottom: 0; }
     .site-nav .flexer {
       order: 1; } }
